--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ publishing {
 }
 
 license {
-    header = file("code_quality/GPL3_HEADER.txt")
+    header = file("code_quality/${license_header}_HEADER.txt")
     include "**/*.java"
     tasks {
         main {
