--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 #General
 mc_version = 19w02a
-yarn_mappings = 19w02a.20
-loader_version = 0.3.2.93
-fabric_version = 0.1.4.71
+yarn_mappings = 19w02a.24
+loader_version = 0.3.2.95
+fabric_version = 0.1.4.72
 
 #Publishing
 mod_version = 0.1.0
+license_header = GPL3
 
 #Other Dependencies
 findbugs_version = 3.0.2
