--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@ fabric_version = 0.1.4.72
 #Publishing
 mod_version = 0.1.0
 license_header = GPL3
+curseforge_id = 311491
+release_type = beta
 
 #Other Dependencies
 findbugs_version = 3.0.2
