--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
+import java.nio.charset.StandardCharsets
 import java.time.Year
 
 plugins {
     id "fabric-loom" version "0.2.0-SNAPSHOT"
-    id "net.minecrell.licenser" version "0.4.1"
+    id "net.minecrell.licenser" version "0.4"
     id "com.matthewprenger.cursegradle" version "1.1.2"
     id "maven-publish"
 }
@@ -58,7 +59,7 @@ dependencies {
 }
 
 compileJava {
-    options.encoding = "UTF-8"
+    options.encoding = StandardCharsets.UTF_8.name()
 }
 
 if (JavaVersion.current().isJava8Compatible()) {
@@ -94,7 +95,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact remapJar.jar
+            artifact jar
             artifact javadocJar
             artifact sourcesJar
         }
@@ -113,7 +114,7 @@ curseforge {
     if(project.hasProperty("curseforge_id")) {
         project {
             id = findProperty("curseforge_id")
-            mainArtifact(remapJar.jar) {
+            mainArtifact(jar) {
                 displayName = "${project.archivesBaseName} MC${mc_version} v${mod_version}"
             }
             releaseType = project.release_type
@@ -152,16 +153,15 @@ afterEvaluate {
 
 license {
     header = file("code_quality/${license_header}_HEADER.txt")
+    // Apply licenses only to main source set
+    sourceSets = [project.sourceSets.main]
     include "**/*.java"
-    tasks {
-        main {
-            files = project.files("src/main/java")
-            ignoreFailures = true //Ignore failures and only print a warning on license violations
-        }
-    }
+    charset = StandardCharsets.UTF_8.name()
+
     style {
         java = "BLOCK_COMMENT"
     }
+    ignoreFailures = true //Ignore failures and only print a warning on license violations
 
     //export variables
     ext {
